--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -22,6 +22,8 @@
 @import url(../blocks/elements/__like/_active/elements__like_active.css);
 @import url(../blocks/elements/__like-counter/element__like-counter.css);
 @import url(../blocks/elements/__remove-button/elements__remove-button.css);
+@import url(../blocks/elements/__remove-button/_hidden/elements__remove-button_hidden.css);
+@import url(../blocks/elements/__remove-button/_visible/elements__remove-button_visible.css);
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
